tests/parse-fail/expressions_no_unary_plus.rs
fn main() {
    println!("{}", +100);     // error: expected expression, found `+`
    //~^ ERROR: expected expression, found `+`
}
